# SM4

./: CMakeLists.txt  README.md
include/: sm4.h
src/: sm4.c
test/: main.c
